Combining mine record add code. Creating universal delete code.
